# reginleif

./: Cargo.toml  LICENSE  README.md
reginleif/: Cargo.toml
reginleif-macro/: Cargo.toml
reginleif-macro/src/: lib.rs
reginleif-test/: Cargo.toml
reginleif-test/src/: lib.rs  reginleif.rs  utils.rs
reginleif-test/src/reginleif/: auth.rs  metadata.rs
reginleif-test/src/utils/: expiring_data.rs  save_path.rs
reginleif-utils/: Cargo.toml
reginleif-utils/src/: expiring_data.rs  lib.rs  save_path.rs  serde_convert.rs  sha.rs
reginleif/src/: auth.rs  lib.rs  utils.rs
reginleif/src/auth/: account.rs  constant.rs  microsoft.rs  minecraft.rs  xbox.rs
reginleif/src/metadata/: client.rs
reginleif/src/metadata/client/: asset.rs  library.rs  package.rs  version.rs
reginleif/src/utils/: expiring_data.rs  fetch.rs  serde_convert.rs
