[workspace]
members=[
  "reginleif",
  "reginleif-test",
  "reginleif-utils",
  "reginleif-macro"
]
resolver = "2"

[workspace.package]
version = "0.1.3"
license = "Apache-2.0"
description = "The core library of nolauncher."
readme = "README.md"
repository = "https://github.com/bloodnighttw/reginleif"
