[workspace]
members=[
  "reginleif",
  "reginleif-test",
  "reginleif-utils",
  "reginleif-macro"
]
resolver = "2"

[workspace.package]
version = "0.2.3" # Don't forget to update this version to dependencies in [workspace.dependencies] reginleif-utils and reginleif-macro
license = "Apache-2.0"
description = "The core library of nolauncher."
readme = "README.md"
repository = "https://github.com/bloodnighttw/reginleif"

[workspace.dependencies]
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
tokio = {  version = "1.38.0", features = ["full"] }
async-trait = "0.1.81"
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.61"
reginleif-utils = {path = "reginleif-utils", version = "0.2.3"} # Same version as workspace
reginleif-macro = {path = "reginleif-macro", version = "0.2.3"} # Same version as workspace
sha2 = "0.10.8"
sha1 = "0.10.6"
quote = "1.0.36"
syn = { version = "2.0.68",features = ["full"] }
log = "0.4.22"