[package]
name = "reginleif-macro"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.68",features = ["full"] }