[package]
name = "reginleif-test"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reginleif = {path = "../reginleif", version = "0.1.3"}
reginleif-utils = {path = "../reginleif-utils", version = "0.1.3"}
reginleif-macro = {path = "../reginleif-macro", version = "0.1.3"}
tokio = {version = "1.38.0", features = ["full"]}
reqwest = "0.12.5"
async-trait = "0.1.81"
anyhow = "1.0.86"