# This is a test package for reginleif
# It is used to test the functionality of reginleif, reginleif-utils, reginleif-macro
# and it **SHOULD NOT** be used in production or upload to crates.io!

[package]
name = "reginleif-test"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reginleif = {path = "../reginleif"} # to test package, so not depend on workspace setting!
reginleif-utils = {path = "../reginleif-utils"} # to test package, so not depend on workspace setting!
reginleif-macro = {path = "../reginleif-macro"} # to test package, so not depend on workspace setting!
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true