[package]
name = "reginleif-utils"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0.86"
async-trait = "0.1.81"
tokio = { version = "1.38.0", features = ["full"] }
reginleif-macro = {path = "../reginleif-macro", version = "0.1.3"}
serde_json = "1.0.120"