[package]
name = "reginleif-utils"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
reginleif-macro.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha1.workspace = true
sha2.workspace = true