[package]
name = "reginleif"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "The core library of nolauncher."
readme = "../README.md"
repository = "https://github.com/bloodnighttw/reginleif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.8.3"
serde_json = "1.0.120"
anyhow = "1.0.86"
tokio = {  version = "1.38.0", features = ["full"] }
reginleif-macro = {path = "../reginleif-macro", version = "0.1.0"}
async-trait = "0.1.81"
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.61"